src/objects/Weeksheet__c.object
<CustomObject>
    <fields>
        <fullName>Candidate__c</fullName>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Weeksheets</relationshipLabel>
        <relationshipName>Weeksheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_hrs1__c</fullName>
        <label>Duration(hrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_hrs2__c</fullName>
        <label>Duration(hrs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization2__c</fullName>
        <label>Organization</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Particular2__c</fullName>
        <label>Particular</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Particular__c</fullName>
        <label>Particular</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Dailly__c</fullName>
        <formula>Duration_hrs1__c  +  Duration_hrs2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours(Dailly)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Weeksheet</label>
    <nameField>
        <displayFormat>WS-{0000}</displayFormat>
        <label>Weeksheet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weeksheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>